--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,6 @@
-name: 'Node 12 Template Action'
-description: 'Get started with Node actions'
-author: 'GitHub'
-inputs:
-  myInput:
-    description: 'Input to use'
-    default: 'world'
+name: 'Get tag name'
+description: 'Gets current tag name and puts it into an environment variable GITHUB_TAG_NAME.'
+author: 'Oleg Tarasov'
 runs:
   using: 'node12'
   main: 'lib/main.js'
