Updated readme and icon

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,7 @@
 name: 'Get tag name'
 description: 'Gets current tag name and puts it into an environment variable GITHUB_TAG_NAME.'
+icon: 'tag'
+color: 'orange'
 author: 'Oleg Tarasov'
 runs:
   using: 'node12'
