--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'Get tag name'
-description: 'Gets current tag name and puts it into an environment variable GITHUB_TAG_NAME.'
+description: 'Gets current tag name and puts it into an environment variable GIT_TAG_NAME.'
 author: 'Oleg Tarasov'
 runs:
   using: 'node12'
