--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,7 +44,9 @@
       "semi": "off",
       "@typescript-eslint/semi": ["error", "never"],
       "@typescript-eslint/type-annotation-spacing": "error",
-      "@typescript-eslint/unbound-method": "error"
+      "@typescript-eslint/unbound-method": "error",
+      "i18n-text/no-en": "off",
+      "sort-imports": "off"
     },
     "env": {
       "node": true,
