--- a/package.json
+++ b/package.json
@@ -36,10 +36,11 @@
     "eslint": "^8.26.0",
     "eslint-plugin-github": "^4.6.1",
     "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^26.6.3",
     "jest-circus": "^29.2.2",
     "js-yaml": "^4.1.0",
-    "prettier": "2.7.1",
+    "prettier": "^3.2.5",
     "ts-jest": "^26.4.4",
     "typescript": "^4.8.4"
   }
